fix: correct padding to fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,7 +529,7 @@ a {
 .subscription .body {
   background-color: #063183;
   border-radius: 2rem;
-  padding: 15rem 0 11rem 8rem;
+  padding: 11rem 0 11rem 8rem;
   position: relative;
 }
 
